--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "json-bigint": "^0.3.0",
+    "lodash": "^4.17.15",
     "vant": "^2.4.6",
     "vee-validate": "^3.2.3",
     "vue": "^2.6.10",
