--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "socket.io-client": "^2.3.0",
     "vant": "^2.4.6",
     "vee-validate": "^3.2.3",
     "vue": "^2.6.10",
